--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
     display: inline-block;
     cursor: pointer;
     background-color: #667890;
-    margin: 0 3px;
+    margin: 3px;
     color: #fff;
     padding: 2px 10px;
 }
